# htmls

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  README.rst  htmlq.py  htmls.py  pyproject.toml  pytest.ini  recreate-virtualenv.sh  requirements.txt  setup.py  tox.ini
htmls/: __init__.py
releasenotes/: releasenotes-2.md
tests/: test_example.py  test_htmlq.py  test_htmls.py
